Fix bug #70106 (Inheritance by anonymous class)